[metadata]
name = django-powertables
version = 0.1.1
description = A sortable filter table implementation for the Django web framework.
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/destacks/powertables
author = Alexis Michaltsis
author_email = info@destacks.com
license = AGPLv3+ and commercial license available
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
